--- a/Views/Kurs/Kayit.cshtml
+++ b/Views/Kurs/Kayit.cshtml
@@ -5,7 +5,7 @@
     Kursiyer Kayıt
 </div>
 
-<form>
+<form method="post" action="/kurs/kayit">
     <div class="form-group my-2">
         <label>E-Posta</label>
         <input name="Eposta" class="form-control">
