--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@
 <div class="text-center">
     <h1 class="display-4"> Bilişim Akademi </h1>
     <p> 
-        <a class="btn btn-primary" href="/Kurs/Kayit">Kayıt Ol</a>
+        <a class="btn btn-primary" asp-controller="Kurs" asp-action="Kayit">Kayıt Ol</a>
     </p>
 </div>
