--- a/Views/Kurs/Geribildirim.cshtml
+++ b/Views/Kurs/Geribildirim.cshtml
@@ -10,7 +10,7 @@
     </blockquote>
     <p class="text-muted">Başvurunuz tarihiniz: @Model.BasvuruZamani </p>
     <div class="btn-group">
-        <a class="btn btn-outline-success" href="#">Başvurular</a>
+        <a class="btn btn-outline-success" asp-action="Index">Başvurular</a>
         <a class="btn btn-success" asp-action="Index" asp-controller="Home">Anasayfa</a>
     </div>
 </div>
