--- a/Views/Kurs/Kayit.cshtml
+++ b/Views/Kurs/Kayit.cshtml
@@ -6,6 +6,7 @@
 </div>
 
 <form method="post" asp-action="Kayit">
+    <div class="text-danger" asp-validation-summary="All"></div>
     <div class="form-group my-2">
         <label asp-for="Eposta"></label>
         <input asp-for="Eposta" class="form-control">
@@ -36,7 +37,7 @@
         <fieldset>
             <legend>Bir Kurs Seçiniz</legend>
             <p>
-                <input id="python" type="radio" asp-for="SecilenKurs" value="Python" />
+                <input id="python" type="radio" asp-for="SecilenKurs" value="Python" checked/>
                 <label>Python</label>
             </p>
             <p>
